<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.nikl.gamebox.games</groupId>
    <artifactId>2048</artifactId>
    <name>2048</name>
    <packaging>jar</packaging>
    <version>3.0.0-beta</version>
    <description>Combine tiles to reach ever greater numbers</description>

    <distributionManagement>
        <repository>
            <id>nikl-repo</id>
            <url>http://repo.nikl.me/artifactory/public</url>
        </repository>
    </distributionManagement>

    <scm>
        <url>https://github.com/NiklasEi/2048-for-gamebox</url>
        <connection>git@github.com:NiklasEi/2048-for-gamebox.git</connection>
    </scm>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <finalName>${project.name}</finalName>
        <sourceDirectory>src/main/java</sourceDirectory>
        <directory>target</directory>
        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>${basedir}/src/main/resources</directory>
                <includes>
                    <include>**/*.yml</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>1.4</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>create-timestamp</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>bukkit-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>nikl-repo</id>
            <url>http://repo.nikl.me/artifactory/public</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.bukkit</groupId>
            <artifactId>bukkit</artifactId>
            <version>1.14.1-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.nikl</groupId>
            <artifactId>gamebox</artifactId>
            <version>${gamebox.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <gamebox.version>3.0.0-beta.2</gamebox.version>
    </properties>
</project>
